Yamls/modelsbase/api-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: modelsbase-api-secure
  namespace: modelsbase
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts: 
    - modelsbase.cloud.nanosolveit.eu
    secretName: modelsbase-api-cert
  rules:
  - host: modelsbase.cloud.nanosolveit.eu
    http:
      paths:
      - backend:
          serviceName: jaqpot-api-service
          servicePort: 8080
        path: /
